--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "dependencies": {
     "body-parser": "^2.2.0",
     "bootstrap": "^5.3.8",
+    "connect-flash": "^0.1.1",
     "express": "^5.1.0",
     "express-handlebars": "^8.0.3",
+    "express-session": "^1.18.2",
     "mongoose": "^8.18.0",
     "mysql2": "^3.14.3",
     "sequelize": "^6.37.7"
