--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "express-session": "^1.18.2",
     "mongoose": "^8.18.0",
     "mysql2": "^3.14.3",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "sequelize": "^6.37.7"
   }
 }
