--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "sequelize": "^6.37.7"
+  },
+  "scripts": {
+    "start": "node index.js"
   }
 }
